2003-02-05  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/memjoin.inl: Don't use default arg in definition.

2003-02-04  John Dallaway  <jld@ecoscentric.com>

	* src/heapgen.tcl: Accommodate POSIX-style arguments
	under Cygwin.

2003-01-29  John Dallaway  <jld@ecoscentric.com>

	* src/heapgen.tcl: Accommodate latest Cygwin Tcl shell
	(tclsh83.exe)

2002-05-10  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/heaptest.c (test_pat): Make failure messages clearer.
	(cyg_start): Output what failures mean.

2002-04-24  Yoshinori Sato  <qzb04471@nifty.ne.jp>

	* src/memfixed.cxx (resize_alloc): Don't set default args in func
	definition.

2002-01-30  Bart Veer  <bartv@redhat.com>

	* tests/malloc4.cxx:
	Never call realloc() with a new size of 0, which frees the buffer.
	Fix the volatility of ptr.p

2002-01-23  Jesper Skov  <jskov@redhat.com>

	* tests/malloc4.cxx (myrand): Fix overflow.

2002-01-15  Jonathan Larmour  <jlarmour@redhat.com>

	* tests/malloc4.cxx (myrand): Fix so that it really treats the limit
	as a limit.

2001-10-17  Jesper Skov  <jskov@redhat.com>

	* include/sepmetaimpl.inl: CYGINT_ISO_STRING_MEMFUNCS checks
	changed to ifdef.

2001-10-11  Jesper Skov  <jskov@redhat.com>

	* tests/testaux.hxx (new_thread): Fixed allocation: increase
	counter before starting threads which have been allocated
	resources.

2001-10-08  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/memalloc.cdl: Only build malloc.cxx and kapi.cxx when needed.

2001-09-20  Jesper Skov  <jskov@redhat.com>

	* tests/heaptest.c: Fix failure reporting.

2001-09-07  Jesper Skov  <jskov@redhat.com>

	* tests/heaptest.c: Added some extra output on failures.

2001-08-01  Jonathan Larmour  <jlarmour@redhat.com>

	* include/sepmetaimpl.inl: Define check_free_memdq and
	check_alloced_memdq as inlines.

	* cdl/memalloc.cdl: Add new allocator supporting separate metadata,
	and the associated config options, and build sepmeta.cxx and tests.